# zero2prod

./: Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
