[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Ricardo Cárdenes <ricardo.cardenes@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"